lab4/store/txn-list-append/20220505T142939.000+0100/node-logs/n2.log
  File "/home/peter/Documents/tf/lab4/cent.py", line 41
    elif msg.body.type = 'txnReplication'
         ^^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?
